JD Summarization notebook added

--- a/hireai/notebooks/summarize_job_description.ipynb
+++ b/hireai/notebooks/summarize_job_description.ipynb
@@ -469,24 +469,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chat = ChatGroq(temperature=0, model_name=\"llama3-8b-8192\")\n",
+    "chain = prompt | chat | output_parser\n",
+    "result = chain.invoke({\"job_description\": job_description,\"job_responsibilities\":responsibilities,\"job_requirements\":requirements})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Here is a summary of the job description, responsibilities, and requirements:\\n\\n**Job Title:** Machine Learning Engineer (MLE)\\n\\n**Job Summary:** We are seeking a Machine Learning Engineer to develop and implement machine learning solutions that drive innovation and efficiency across our projects in the pharmaceutical and healthcare domains.\\n\\n**Key Responsibilities:**\\n\\n* Develop, optimize, and deploy machine learning models\\n* Process and analyze large datasets\\n* Maintain and improve existing machine learning models\\n* Collaborate with cross-functional teams\\n* Utilize software development tools to maintain a robust codebase\\n* Apply various machine learning techniques to solve complex problems\\n\\n**Requirements:**\\n\\n* Proficiency in Python and key machine learning packages\\n* Understanding of data structures, software architecture, and software development tools\\n* Demonstrated ability to apply machine learning techniques\\n* Experience in deploying machine learning models and working with existing models\\n* Strong problem-solving skills and ability to work independently or as part of a team\\n\\n**Preferred Qualifications:**\\n\\n* Experience in building and accessing API endpoints\\n* Cloud computing experience, particularly with AWS\\n* Experience with deploying open source deep learning models\\n* Proficiency in Deep Learning frameworks, such as PyTorch\\n* Experience in building and managing MLOps pipelines'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(result)"
+   ]
   },
   {
    "cell_type": "code",
