done many notebook experiments

--- a/hireai/notebooks/resume_scoring.ipynb
+++ b/hireai/notebooks/resume_scoring.ipynb
@@ -303,6 +303,7 @@
     "you are a resume score calculator.I will give you resume content and job descriptoin. based on that please give me a score out of 10.\n",
     "you want to return the output in JSON format.\n",
     "\n",
+    "\n",
     "Resume Content : {resume_content}\n",
     "Job Description : {job_description}\n",
     "\n",
@@ -720,6 +721,80 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "get_score(resume_content,job_description)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New Prompt testing for better accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = \"\"\"\n",
+    "you are a resume score calculator.I will give you resume content and job descriptoin. based on that please give me a score out of 100.\n",
+    "You want to follow instructions given below to give score:\n",
+    "    Scoring Criteria:\n",
+    "        A. Skills (70 points)\n",
+    "\n",
+    "        Required Skills (20 points):    \n",
+    "            Award full points if all required skills are present.\n",
+    "            Deduct points proportionally for missing skills.\n",
+    "\n",
+    "        B. Experience (20 points)\n",
+    "\n",
+    "        Relevant Work Experience (20 points):\n",
+    "            Award points based on the relevance and extent of work experience compared to the JD.\n",
+    "            Full points for exact matches and significant relevant experience\n",
+    "            \n",
+    "        C. Specific Job Responsibilities (10 points)\n",
+    "            Award points based on how well the candidate's previous job responsibilities match the job description.\n",
+    "\n",
+    "\n",
+    "Resume Content : {resume_content}\n",
+    "Job Description : {job_description}\n",
+    "\n",
+    "I want to get out put in below JSON format:\n",
+    "JSON output : \n",
+    "    'Score' : score you give,\n",
+    "    'Explanation' : reason why you give this score,\n",
+    "    'Missing': what are missing,\n",
+    "    'Summary': summary\n",
+    "\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_score(resume_content,job_description):\n",
+    "    prompt = PromptTemplate.from_template(template)\n",
+    "    chain = prompt | chat | output_parser\n",
+    "    result = chain.invoke({\"resume_content\":resume_content,\"job_description\": job_description})\n",
+    "    data = json.loads(result)\n",
+    "    score=data['Score']\n",
+    "    explanation = data['Explanation']\n",
+    "    missing=data['Missing']\n",
+    "    summary=data['Summary']\n",
+    "    return score,explanation,missing,summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "get_score(resume_content,job_description)\n"
    ]
