--- a/hireai/notebooks/langchain_agent_Q&A.ipynb
+++ b/hireai/notebooks/langchain_agent_Q&A.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = 'sk-proj-ZnzFYosNrNpRNMWj9RkpT3BlbkFJ6ccA2AHplnYl57aoV6wK'"
+    "os.environ['OPENAI_API_KEY'] = 'enter your key'"
    ]
   },
   {
